HomeWork_37 1.1